--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -10,8 +10,33 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajv": "^6.5.0",
     "axios": "^0.18.0",
-    "vue": "^2.5.2",
+    "browserslist": "^3.2.8",
+    "caniuse-api": "^2.0.0",
+    "cli-spinners": "^1.3.1",
+    "clone": "^2.1.1",
+    "color": "^3.0.0",
+    "colormin": "^1.1.2",
+    "css-color-names": "0.0.4",
+    "defined": "^1.0.0",
+    "es6-map": "^0.1.5",
+    "es6-weak-map": "^2.0.2",
+    "escope": "^3.6.0",
+    "flatten": "^1.0.2",
+    "has": "^1.0.3",
+    "hash-sum": "^1.0.2",
+    "html-comment-regex": "^1.1.1",
+    "indexes-of": "^1.0.1",
+    "is-absolute-url": "^2.1.0",
+    "is-plain-obj": "^1.1.0",
+    "is-svg": "^3.0.0",
+    "json-loader": "^0.5.7",
+    "lodash.memoize": "^4.1.2",
+    "lodash.uniq": "^4.5.0",
+    "onetime": "^2.0.1",
+    "postcss-message-helpers": "^2.0.0",
+    "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -38,6 +63,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "prettier": "^1.12.0",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
