Vue dev settings

--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -24,10 +24,12 @@
     "es6-weak-map": "^2.0.2",
     "escope": "^3.6.0",
     "flatten": "^1.0.2",
+    "growly": "^1.3.0",
     "has": "^1.0.3",
     "hash-sum": "^1.0.2",
     "html-comment-regex": "^1.1.1",
     "indexes-of": "^1.0.1",
+    "interpret": "^1.1.0",
     "is-absolute-url": "^2.1.0",
     "is-plain-obj": "^1.1.0",
     "is-svg": "^3.0.0",
@@ -72,9 +74,9 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
+    "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^2.11.2",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
