--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -43,7 +43,8 @@
     "sass-loader": "^7.0.2",
     "vee-validate": "^2.1.0-beta.1",
     "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-b"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
