--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ Flask==1.0.2
 Flask-SocketIO==3.0.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gevent==1.3.2.post0
+greenlet==0.4.13
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
