--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ python-socketio==1.9.0
 requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.2.8
+SQLAlchemy-Utils==0.33.3
 urllib3==1.22
 Werkzeug==0.14.1
 WTForms==2.2
