--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -45,7 +45,8 @@
     "vue": "^2.5.16",
     "vue-cookies": "^1.5.6",
     "vue-router": "^3.0.1",
-    "vue-socket.io": "^2.1.1-b"
+    "vue-socket.io": "^2.1.1-b",
+    "vue-textarea-autosize": "^1.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
