--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -46,7 +46,8 @@
     "vue-cookies": "^1.5.6",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^2.1.1-b",
-    "vue-textarea-autosize": "^1.0.4"
+    "vue-textarea-autosize": "^1.0.4",
+    "vue-grid-layout": "^2.1.13"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
