--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 unit test:
-  image: kenfehling/node-selenium-chrome
+  image: circle/node:6.12-browsers
   stage: test
   script:
     - npm install --prefix=app/frontend --progress=false
