--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -44,11 +44,9 @@
     "vee-validate": "^2.1.0-beta.1",
     "vue": "^2.5.16",
     "vue-cookies": "^1.5.6",
-    "vue-grid-layout": "^2.1.13",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^2.1.1-b",
-    "vue-textarea-autosize": "^1.0.4",
-    "vue-grid-layout": "^2.1.13"
+    "vue-textarea-autosize": "^1.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
