Init venv in test env

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ unit test:
   image: testim/node-chrome
   stage: test
   script:
+    - ./INSTALL
     - make install
     - make build
     - make test
