--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -45,6 +45,7 @@
     "vue": "^2.5.16",
     "vue-cookies": "^1.5.6",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.11.0",
     "vue-socket.io": "^2.1.1-b",
     "vue-textarea-autosize": "^1.0.4"
   },
