--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -108,10 +108,7 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0",
-    "vue-router": "^3.0.1",
-    "vue-socket.io": "^2.1.1-b",
-    "vue-textarea-autosize": "^1.0.4"
+    "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -143,6 +140,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "prettier": "^1.12.0",
+    "puppeteer": "^1.5.0",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
