--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -48,8 +48,7 @@
     "vue-grid-layout": "^2.1.13",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^2.1.1-b",
-    "vue-textarea-autosize": "^1.0.4",
-    "vue-tribute": "^1.0.1"
+    "vue-textarea-autosize": "^1.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
