Use logged in user for submitting a ticket and improved style

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ cache:
     paths:
         - app/frontend/node_modules
         - venv
+        - app/frontend/package-lock.json
 unit test:
     image: testim/node-chrome
     stage: test
