--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -102,6 +102,7 @@
     "vue-cookies": "^1.5.6",
     "vue-grid-layout": "^2.1.13",
     "vue-loader": "^13.3.0",
+    "vue-loading-spinner": "^1.0.11",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.11.0",
     "vue-socket.io": "^2.1.1-b",
