Check style in different part of pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,3 +18,8 @@ test flask:
     stage: test
     script:
         - make test-backend
+
+validate python code style:
+    stage: test
+    script:
+        - make validate-backend
