--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -111,6 +111,7 @@
     "vue-template-compiler": "^2.5.2",
     "vue-textarea-autosize": "^1.0.4",
     "vue-tribute": "^1.0.1",
+    "vue2-dropzone": "^3.2.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
