--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Login==0.4.1
 Flask-SocketIO==3.0.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+Flask-Mail==0.9.1
 gevent==1.3.2.post0
 greenlet==0.4.13
 idna==2.6
