--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vue/test-utils": "^1.0.0-beta.18",
+    "@websanova/vue-auth": "^2.21.11-beta",
     "ajv": "^6.5.0",
     "autoprefixer": "^7.1.2",
     "axios": "^0.18.0",
@@ -98,6 +99,7 @@
     "url-loader": "^0.5.8",
     "vee-validate": "^2.1.0-beta.1",
     "vue": "^2.5.16",
+    "vue-axios": "^2.1.1",
     "vue-breadcrumbs": "^1.1.2",
     "vue-click-outside": "^1.0.7",
     "vue-cookies": "^1.5.6",
