--- a/requirements.txt
+++ b/requirements.txt
@@ -24,5 +24,6 @@ SQLAlchemy-Utils==0.33.3
 urllib3==1.22
 Werkzeug==0.14.1
 WTForms==2.2
+git+https://github.com/i-kiwamu/python3-oauth2.git
 pytest
 pycodestyle
