--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+atomicwrites==1.1.5
+attrs==18.1.0
 certifi==2018.4.16
 chardet==3.0.4
 click==6.7
 eventlet==0.23.0
 Flask==1.0.2
+Flask-HashFS==0.3.0
 Flask-JWT==0.3.2
 Flask-Login==0.4.1
 Flask-SocketIO==3.0.1
@@ -10,20 +13,28 @@ Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 gevent==1.3.2.post0
 greenlet==0.4.13
+hashfs==0.7.0
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+more-itertools==4.2.0
+numpy==1.14.5
+opencv-python==3.4.1.15
+Pillow==5.1.0
+pluggy==0.6.0
+py==1.5.3
+pycodestyle==2.4.0
 PyJWT==1.4.2
+pytesseract==0.2.2
+pytest==3.6.2
 python-engineio==2.1.1
 python-socketio==1.9.0
 requests==2.18.4
+scandir==1.7
 six==1.11.0
 SQLAlchemy==1.2.8
 SQLAlchemy-Utils==0.33.3
 urllib3==1.22
 Werkzeug==0.14.1
 WTForms==2.2
-pytest
-pycodestyle
-flask_hashfs
