--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -42,6 +42,7 @@
     "cross-spawn": "^5.0.1",
     "css-color-names": "0.0.4",
     "css-loader": "^0.28.0",
+    "dateformat": "^3.0.3",
     "defined": "^1.0.0",
     "es6-map": "^0.1.5",
     "es6-weak-map": "^2.0.2",
@@ -104,6 +105,8 @@
     "vue-grid-layout": "^2.1.13",
     "vue-loader": "^13.3.0",
     "vue-loading-spinner": "^1.0.11",
+    "vue-material": "^1.0.0-beta-10.2",
+    "vue-moment": "^4.0.0-0",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.11.0",
     "vue-socket.io": "^2.1.1-b",
