--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ MarkupSafe==1.0
 PyJWT==1.4.2
 python-engineio==2.1.1
 python-socketio==1.9.0
+python-Levenshtein==0.12.0 
 requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.2.8
